name:                c-abstract-machine
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kccqzy/c-abstract-machine#readme
license:             BSD3
license-file:        LICENSE
author:              Zhouyu Qian
maintainer:          example@example.com
copyright:           2017 Zhouyu Qian
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CMachine.Types
                     , CMachine.Basic
                     , CMachine.Operators
  ghc-options:         -Wall -Wextra -Werror
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , mtl
                     , data-default
  default-language:    Haskell2010

executable c-abstract-machine-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , c-abstract-machine
  default-language:    Haskell2010

test-suite c-abstract-machine-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , c-abstract-machine
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kccqzy/c-abstract-machine
